--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "Normaliz"
 uuid = "0c79eb54-65aa-11e9-3208-9352110094d3"
 authors = ["Sebastian Gutsche <gutsche@momo.math.rwth-aachen.de>"]
 version = "0.1.0"
+
+[deps]
+CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
+Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
