--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,7 @@ authors = ["Sebastian Gutsche <gutsche@momo.math.rwth-aachen.de>"]
 version = "0.1.0"
 
 [deps]
+CMake = "631607c0-34d2-5d66-819e-eb0f9aa2061a"
 CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
 Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
