Work towards making things compile again
- switch from CMake.jl to CMake_jll.jl to get a working cmake
- honor GMP_INSTALLDIR when building the bundled C++ code
- revise build steps, and force a 'clean' rebuild each time
- pass arguments as const ref instead of as copy in several places
- cleanup the C++ code
- switch to using CxxWrap STL handling for std::vector
- ... and many more changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-Manifest.toml
-deps/src/CMakeCache.txt
-deps/src/CMakeFiles/
-deps/src/Makefile
-deps/src/cmake_install.cmake
-deps/src/libnormaliz.so
-deps/build.log
+/Manifest.toml
+/deps/build.log
+/deps/Normaliz/
+/deps/src/build/
