--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,16 @@
 name = "Normaliz"
 uuid = "0c79eb54-65aa-11e9-3208-9352110094d3"
-authors = ["Sebastian Gutsche <gutsche@momo.math.rwth-aachen.de>"]
 version = "0.1.0"
 
 [deps]
-CMake = "631607c0-34d2-5d66-819e-eb0f9aa2061a"
+CMake_jll = "3f4e10e2-61f2-5801-8945-23b9d642d0e6"
 CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+
+[compat]
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
