--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -69,17 +69,19 @@ jobs:
 
       - name: "Run tests"
         uses: julia-actions/julia-runtest@latest
+        with:
+          depwarn: error
 
-      #- name: "Run doctests"
-      #  if: ${{ matrix.julia-version == '1.6' }}
-      #  run: |
-      #    julia --project=docs --color=yes --code-coverage -e '
-      #      using Pkg
-      #      Pkg.develop(PackageSpec(path=pwd()))
-      #      Pkg.instantiate()
-      #      using Documenter: doctest
-      #      using Normaliz
-      #      doctest(Normaliz)'
+      - name: "Run doctests"
+        if: ${{ matrix.julia-version == '1.6' }}
+        run: |
+          julia --project=docs --color=yes --code-coverage -e '
+            using Pkg
+            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.instantiate()
+            using Documenter: doctest
+            using Normaliz
+            doctest(Normaliz)'
 
       - name: "Process code coverage"
         continue-on-error: true
@@ -89,28 +91,38 @@ jobs:
         continue-on-error: true
         uses: codecov/codecov-action@v3
 
-#  docs:
-#    name: Documentation
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: julia-actions/setup-julia@v1
-#        with:
-#          version: '1.6'
-#      - name: Cache artifacts
-#        uses: actions/cache@v3
-#        env:
-#          cache-name: cache-artifacts
-#        with:
-#          path: ~/.julia/artifacts
-#          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
-#          restore-keys: |
-#            ${{ runner.os }}-test-${{ env.cache-name }}-
-#            ${{ runner.os }}-test-
-#            ${{ runner.os }}-
-#      - uses: julia-actions/julia-buildpkg@latest
-#      - uses: julia-actions/julia-docdeploy@latest
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
-#
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: julia-actions/setup-julia@v1
+        with:
+          version: '1.6'
+      - name: Cache artifacts
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
+      - name: "Build package"
+        uses: julia-actions/julia-buildpkg@latest
+      - run: |
+          julia --project=docs --color=yes -e '
+            using Pkg
+            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.instantiate()'
+      - run: |
+          julia --project=docs -e '
+            using Documenter: doctest
+            using Normaliz
+            doctest(Normaliz)'
+      - run: julia --project=docs --color=yes docs/make.jl
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
