Use color for doctests

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -118,7 +118,7 @@ jobs:
             Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()'
       - run: |
-          julia --project=docs -e '
+          julia --project=docs --color=yes -e '
             using Documenter: doctest
             using Normaliz
             doctest(Normaliz)'
