Refactor CMakeLists.txt

--- a/deps/src/CMakeLists.txt
+++ b/deps/src/CMakeLists.txt
@@ -2,13 +2,14 @@ cmake_minimum_required(VERSION 3.5)
 
 project(libnormaliz_julia)
 
+set(JL_TARGET normaliz_julia)
+
 set(CMAKE_MACOSX_RPATH 1)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 
 find_package(JlCxx REQUIRED)
 get_target_property(JlCxx_location JlCxx::cxxwrap_julia LOCATION)
 get_filename_component(JlCxx_location ${JlCxx_location} DIRECTORY)
-
 message(STATUS "Found JlCxx at ${JlCxx_location}")
 
 include(CheckCXXCompilerFlag)
@@ -17,15 +18,17 @@ set(CMAKE_CXX_STANDARD 14)
 
 set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib;${JlCxx_location}")
 
-include_directories(${gmp_prefix}/include)
-include_directories(${normaliz_prefix}/include)
-include_directories(${mpfr_prefix}/include)
-include_directories(${nauty_prefix}/include)
-include_directories(${flint_prefix}/include)
+include_directories(
+    ${gmp_prefix}/include
+    ${normaliz_prefix}/include
+    ${mpfr_prefix}/include
+    ${nauty_prefix}/include
+    ${flint_prefix}/include
+    )
 
-add_library(normaliz_julia SHARED normaliz.cpp)
+add_library(${JL_TARGET} SHARED normaliz.cpp)
 
-target_link_libraries(normaliz_julia
+target_link_libraries(${JL_TARGET}
     JlCxx::cxxwrap_julia
     JlCxx::cxxwrap_julia_stl
     ${libnormaliz_path}
@@ -38,7 +41,7 @@ target_link_libraries(normaliz_julia
     )
 
 install(TARGETS
-  normaliz_julia
+  ${JL_TARGET}
 LIBRARY DESTINATION lib
 ARCHIVE DESTINATION lib
 RUNTIME DESTINATION lib)
